Fix extra spacing in footer

--- a/themes/wordspeak_lite_j2/assets/css/theme.css
+++ b/themes/wordspeak_lite_j2/assets/css/theme.css
@@ -204,6 +204,10 @@ li.previous > a:before {
     content: "\2190\0020";
 }
 
+#footer > p {
+    display: none;
+}
+
 .listdate:after {
     content: " - ";
 }
